--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Computer Engineering - University of Waterloo}
+\cvsection{Education - University of Waterloo}
 
 
 %-------------------------------------------------------------------------------
@@ -11,15 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Bachelors in Computer Engineering} % Degree
+    {Bachelors in Computer Engineering - \textbf{2A}} % Degree
     {University of Waterloo} % Institution
     {Waterloo, Canada} % Location
     {Sept 2021 - April 2027} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Academic Representative for Section 3 Stream 8 students}
-        \item {Part of Waterloo Computer Science Club}
-        \item {\textbf{Courses:} Professionalism in Engineering, Linear Algebra, Fundamentals of Programming, Classical Mechanics, Calculus 1, Communication in Engineering}
+        \item {Part of various clubs - Waterloo Computer Science Club, WARG, Archery}
+        \item {\textbf{2A - Courses:} Digital Computers, Electronic Circuits, Algorithms and Data Structures, Materials Chemistry for Engineers, Advanced Calculus 1, Numerical Methods}
       \end{cvitems}
     }
     
