--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -59,19 +59,20 @@
         % \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
       \end{cvitems}
     }
-  % \cventry
-  %   {Personal Project} % Organisation
-  %   {\underline{Heimdall Personal Dashboard | \href{https://heimdall.lefan.me}{Link}}} % Project
-  %   {Ottawa, ON} % Location
-  %   {July 2021 - now} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) of project
-  %       \item {A self hosted site using Cloudflare \& Oracle servers that present many self hosted services}
-  %       \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
-  %       \item {Built using \textbf{SWAG}, \textbf{Docker}, \textbf{Oracle Cloud}, \textbf{Cloudflare}}
-  %       \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
-  %     \end{cvitems}
-  %   }
+
+  \cventry
+    {Personal Project} % Organisation
+    {\underline{Heimdall Personal Dashboard | \href{https://heimdall.lefan.me}{Link}}} % Project
+    {Ottawa, ON} % Location
+    {July 2021 - now} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of project
+        \item {A self hosted site using Cloudflare \& Oracle servers that present many self hosted services}
+        % \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
+        % \item {Built using \textbf{SWAG}, \textbf{Docker}, \textbf{Oracle Cloud}, \textbf{Cloudflare}}
+        \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
 \end{cventries}
