--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -11,16 +11,16 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming Languages} % Category
+    {Programming} % Category
     {Python, C/C++, Java, HTML/CSS, JavaScript} % Skills
 
   \cvskill
     {Technologies} % Category
-    {Pandas, PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm}
+    {Pandas, PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker)}
 
   \cvskill 
   {}
-  {AWS (Lambda, API gateway, EC2, Sagemaker), React, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions}
+  {React, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions}
 %---------------------------------------------------------
   \cvskill
     {Soft Skills} % Category
