--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -19,7 +19,7 @@
         \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need.}
           \item[] {\textbf{Technical Skills:} Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
         \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team.}
-          \item[] {\textbf{Technical Skills:} \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
+          \item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
       \end{cvitems}
     }
 
