replace personal website with interqu

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -11,14 +11,14 @@
 
 %---------------------------------------------------------
   \cventry
-    {Bachelors in Computer Engineering - \textbf{2A}} % Degree
+    {Bachelors in Computer Engineering - \textbf{GPA - 3.91}} % Degree
     {University of Waterloo} % Institution
     {Waterloo, Canada} % Location
     {Sept 2021 - April 2027} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Part of various clubs - Waterloo Computer Science Club, WARG, Archery}
-        \item {\textbf{2A - Courses:} Digital Computers, Electronic Circuits, Algorithms and Data Structures, Materials Chemistry for Engineers, Advanced Calculus 1, Numerical Methods}
+        \item {\textbf{Current Courses:} Digital Computers, Electronic Circuits, Algorithms and Data Structures, Advanced Calculus 1, Numerical Methods}
       \end{cvitems}
     }
     
