--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -10,15 +10,15 @@
 \begin{cventries}
 
   \cventry
-    {Software Developer Intern (Summer Co-Op - Remote)} % Job title
+    {Software Developer Intern (Summer Co-Op)} % Job title
     {TELUS Corporation} % Organisation
     {Ottawa, ON} % Location
     {May 2023 - August 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need.}
+        \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need}
           \item[] {\textbf{Technical Skills:} Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
-        \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team.}
+        \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team}
           \item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
       \end{cvitems}
     }
@@ -28,14 +28,12 @@
     {InfiniHacks Organizer} % Job title
     {InfiniHacks} % Organisation
     {Ottawa, ON} % Location
-    {July 2019 - Current} % Date(s)
+    {July 2019 - November 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Responsible for organizing and planning all aspects of InfiniHack's Hackathon.}
-        \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues.}
-        \item {Prepared presentations on Machine Learning with \textbf{PyTorch} for participants.}
-        % \item {\textbf{Technical Skills:} Python, PyTorch, JupyterLab.}
-        % \item {\textbf{Soft Skills:} Time Management, Communication, Presentation.}
+        \item {Organized and planned all aspects of InfiniHack's Hackathon}
+        \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues}
+        \item {Presented and lead Machine Learning workshops using \textbf{PyTorch}}
       \end{cvitems}
     }
 
