--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -20,11 +20,11 @@
 
   \cvskill 
   {}
-  {React, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions}
+  {React, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh),  Excel.}
 %---------------------------------------------------------
   \cvskill
     {Soft Skills} % Category
-    {Time Management, Teamwork, Communication, Problem-solving, Presentation, Documentation.} % Skills
+    {Time Management, Teamwork, Communication, Problem-solving, Presentation.} % Skills
 
 %---------------------------------------------------------
   % \cvskill
@@ -33,9 +33,9 @@
 
 
 %---------------------------------------------------------
-  \cvskill
-    {Miscellaneous} % Category
-    {Linux, Shell (Bash/Zsh),  Excel.} % Skills
+  % \cvskill
+    % {Miscellaneous} % Category
+    % {Linux, Shell (Bash/Zsh),  Excel.} % Skills
 
 \end{cvskills}
 %-------------------------------------------------------------------------------
