--- a/resume.tex
+++ b/resume.tex
@@ -6,6 +6,8 @@
 % A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[11pt, a4paper]{russell}
 
+\usepackage{tikz}
+
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
 
@@ -39,7 +41,7 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Lefan}{Hu}
+\name{\textbf{Lefan}}{\textbf{Hu}}
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
 % \address{YOUR ADDRESS}
 
