initial 2b resume draft
- modified interqu project description to incorporate angular
- replaced mask pass project with taylor swift generator project

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -65,31 +65,48 @@
 	}
 
 	%---------------------------------------------------------
+	% \cventry
+	% {MLH Hacky Birthday 2021 | \textbf{Third Overall} | Managed with Git} % Organisation
+	% {\underline{\href{https://devpost.com/software/mlh-birthday-ads}{MaskPass - Hackathon Winner | \ExternalLink}}} % Project
+	% {Ottawa, ON} % Location
+	% {July 2021 - July 2021} % Date(s)
+	% {
+	% 	\begin{cvitems} % Description(s) of project
+	% 		\item {An automatic AI utility that uses cameras and machine learning to discern if an individual has a mask on or not to open a conditional door}
+	% 		\item {System that recognizes a customer’s mask status - no mask, mask on, and states in-between}
+	% 		\item {Leverages \textbf{cloud computing} to be viable on low-power devices}
+	% 		\item {Built using \textbf{TensorFlow} for CV, \textbf{Flask server} for custom API, \textbf{VEX} radio for motor control of door}
+	% 		% \item {\textbf{Technical Skills:} TensorFlow, Flask, Arduino, VEX}
+	% 		% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
+	% 	\end{cvitems}
+	% }
+
+	%---------------------------------------------------------
 	\cventry
-	{MLH Hacky Birthday 2021 | \textbf{Third Overall} | Managed with Git} % Organisation
-	{\underline{\href{https://devpost.com/software/mlh-birthday-ads}{MaskPass - Hackathon Winner | \ExternalLink}}} % Project
+	{Taylor Swift Generator | \textbf{GF Project}} % Organisation
+	{\underline{\href{https://lefan.ca/silly-goose}{Taylor Swift Generator | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
-	{July 2021 - July 2021} % Date(s)
+	{January 2024 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-			\item {An automatic AI utility that uses cameras and machine learning to discern if an individual has a mask on or not to open a conditional door}
-			\item {System that recognizes a customer’s mask status - no mask, mask on, and states in-between}
+      \item {\textbf{LORA adapter} trained on AWS G4DN GPU instance}
+      \item {Hosted on \textbf{huggingface} ML platform}
 			\item {Leverages \textbf{cloud computing} to be viable on low-power devices}
-			\item {Built using \textbf{TensorFlow} for CV, \textbf{Flask server} for custom API, \textbf{VEX} radio for motor control of door}
-			% \item {\textbf{Technical Skills:} TensorFlow, Flask, Arduino, VEX}
+			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, and \textbf{Next.js 14}}
+			\item {\textbf{Technical Skills:} cloud computing, ML, LORA, Next}
 			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
 		\end{cvitems}
 	}
 
 	\cventry
-	{Interqu - Work In Progress} % Organisation
-	{\underline{\href{https://interqu.lefan.ca}{Interqu Interview Platform | \ExternalLink}}} % Project
+	{Interqu}  % Organisation
+	{\underline{\href{https://interqu.com}{Interqu Interview Platform | \ExternalLink}}} % Project
 	{Waterloo, ON} % Location
 	{June 2023 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-			\item {Java boot spring front-end, back-end processing is handled by the following: AWS Statemachine, Lambda, Serverless Application Model, pytorch, chatGPT}
+      \item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, dynamo, graphql), pytorch, chatGPT}
 			% \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
 			\item {Built using \textbf{SWAG - nginx}, \textbf{Docker}, \textbf{AWS - lambda, statemachine, stepfunctions, SAM, etc}, \textbf{Pytorch}, \textbf{ChatGPT}}
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
