--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-\extrainfo{\textbf{Second Year} Computer Engineer at University of Waterloo}
+\extrainfo{\textbf{2nd Year} Computer Engineer | University of Waterloo}
 
 % \quote{``Simplicity is deceptively complicated."}
 
