--- a/cv/education.tex
+++ b/cv/education.tex
@@ -11,14 +11,14 @@
 
 %---------------------------------------------------------
   \cventry
-    {Bachelors in Computer Engineering - \textbf{GPA - 3.91}} % Degree
+    {Bachelors in Computer Engineering} % Degree
     {University of Waterloo} % Institution
     {Waterloo, Canada} % Location
     {Sept 2021 - April 2027} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Part of various clubs - Waterloo Computer Science Club, WARG, Archery}
-        \item {\textbf{Current Courses:} Digital Computers, Electronic Circuits, Algorithms and Data Structures, Advanced Calculus 1, Numerical Methods}
+        \item {Part of various clubs - Waterloo Computer Science Club, WARG}
+        \item {\textbf{Current Courses:} Probability Theory \& Stats 1, Signals \& Systems, Discrete Math \& Logic 2, Embedded Microprocessor Systems, Systems Programming \& Concurrency, Instrumentation \& Prototyping Lab}
       \end{cvitems}
     }
     
