add ciena as work experience

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {Bachelors in Computer Engineering} % Degree
-    {University of Waterloo} % Institution
+    {University of Waterloo - 2nd Year} % Institution
     {Waterloo, Canada} % Location
     {Sept 2021 - April 2027} % Date(s)
     {
