--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -10,7 +10,7 @@
 \begin{cventries}
 
   \cventry
-    {Software Developer Intern (Summer Co-Op)} % Job title
+    {Software Developer Co-Op} % Job title
     {TELUS Corporation} % Organisation
     {Ottawa, ON} % Location
     {May 2023 - August 2023} % Date(s)
@@ -24,16 +24,32 @@
     }
 
 %---------------------------------------------------------
+  % \cventry
+  %   {InfiniHacks Organizer} % Job title
+  %   {InfiniHacks} % Organisation
+  %   {Ottawa, ON} % Location
+  %   {July 2019 - November 2019} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {Organized and planned all aspects of InfiniHack's Hackathon}
+  %       \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues}
+  %       \item {Presented and lead Machine Learning workshops using \textbf{PyTorch}}
+  %     \end{cvitems}
+  %   }
+
+%---------------------------------------------------------
   \cventry
-    {InfiniHacks Organizer} % Job title
-    {InfiniHacks} % Organisation
+    {Automation Tools Development Co-Op} % Job title
+    {CIENA Corporation} % Organisation
     {Ottawa, ON} % Location
-    {July 2019 - November 2019} % Date(s)
+    {January 2024 - April 2024} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Organized and planned all aspects of InfiniHack's Hackathon}
-        \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues}
-        \item {Presented and lead Machine Learning workshops using \textbf{PyTorch}}
+        % \item {Developed major releases of internal tools such as the extract logs application}
+        \item {Built \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors}
+        \item {Use of \textbf{AWS} for audio sentiment analysis with pytorch}
+        \item {Extensive use of \textbf{python} and \textbf{jupyterlab} for scripting, automating, and general parsing of complex log files}
+        \item Use of the \textbf{scrapy} python framework for webcrawling data
       \end{cvitems}
     }
 
