--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -20,7 +20,7 @@
 
   \cvskill 
   {}
-  {React, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh),  Excel.}
+  {React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh),  Excel.}
 %---------------------------------------------------------
   \cvskill
     {Soft Skills} % Category
