various tweaks after feedback from anthony & alex
change order of work experience in chronological order
make verb tense more consistent
add some more skills & tools in top section

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -31,21 +31,21 @@
 \begin{cventries}
 
 	%---------------------------------------------------------
-	\cventry
-	{Hack The North 2022 | Managed with Git} % Organisation
-	{\underline{\href{https://devpost.com/software/drawbot-ulof5z}{DrawBot | \ExternalLink}}} % Project
-	{Waterloo, ON} % Location
-	{Sept. 2022 - Sept. 2022} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {A hackathon project that turns speech descriptions into drawings}
-			\item {\textbf{Assembly AI} turns speech into text prompts for \textbf{Stable Diffusion}}
-			\item {Generated image is translated to vector format and sent to Raspberry PI, which controls a gantry system to create the drawing}
-			\item {\textbf{Fusion 360} used to create models for hardware aspect of project}
-			% \item {\textbf{Technical Skills:} Stable Diffusion, Python, Javascript, React.js, Fusion 360.}
-			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
-		\end{cvitems}
-	}
+	% \cventry
+	% {Hack The North 2022 | Managed with Git} % Organisation
+	% {\underline{\href{https://devpost.com/software/drawbot-ulof5z}{DrawBot | \ExternalLink}}} % Project
+	% {Waterloo, ON} % Location
+	% {Sept. 2022 - Sept. 2022} % Date(s)
+	% {
+	% 	\begin{cvitems} % Description(s) of project
+	% 		\item {A hackathon project that turns speech descriptions into drawings}
+	% 		\item {\textbf{Assembly AI} turns speech into text prompts for \textbf{Stable Diffusion}}
+	% 		\item {Generated image is translated to vector format and sent to Raspberry PI, which controls a gantry system to create the drawing}
+	% 		\item {\textbf{Fusion 360} used to create models for hardware aspect of project}
+	% 		% \item {\textbf{Technical Skills:} Stable Diffusion, Python, Javascript, React.js, Fusion 360.}
+	% 		% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
+	% 	\end{cvitems}
+	% }
 
 
 	%---------------------------------------------------------
@@ -61,6 +61,21 @@
 			\item {Built using \textbf{Google Cloud}, matrix perspective transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}, and \textbf{YOLOv5}}
 			% \item {\textbf{Technical Skills:} Python, PyTorch, OpenCV, Google Cloud, AWS, React.js.}
 			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
+		\end{cvitems}
+	}
+
+	%---------------------------------------------------------
+	\cventry
+	{Arbitrage | High Volume Trading} % Organisation
+	{\underline{Arbitrage}} % Project
+	{Ottawa, ON} % Location
+	{April. 2024 - Now} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of project
+			\item {A project that takes advantage of the inherent delay in computer networks to execute trades on the foreign exchange market which may lag behind platforms with more updated market data such as \textbf{IBKR}}
+			\item {Takes advantage of high frequency fluctuations in the market that cause market prices to be un-synced to make a profit}
+			\item {Bot written in \textbf{Typescript} for managing trades}
+			\item {\textbf{Technical Skills:} Docker, Docker Networking, trading algorithm, Typescript, HFT.}
 		\end{cvitems}
 	}
 
@@ -83,17 +98,17 @@
 
 	%---------------------------------------------------------
 	\cventry
-	{Taylor Swift Generator | \textbf{GF Project}} % Organisation
-	{\underline{\href{https://lefan.ca/silly-goose}{Taylor Swift Generator | \ExternalLink}}} % Project
+	{Taylor Swift Generator | \textbf{Happy birthday website}} % Organisation
+	{\underline{\href{https://lefan.ca/silly-goose/happy-birthday}{Taylor Swift Generator | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
-	{January 2024 - Now} % Date(s)
+	{January 2024 - May 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-      \item {\textbf{LORA adapter} trained on AWS G4DN GPU instance}
-      \item {Hosted on \textbf{huggingface} ML platform}
-			\item {Leverages \textbf{cloud computing} to be viable on low-power devices}
-			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, and \textbf{Next.js 14}}
-			\item {\textbf{Technical Skills:} cloud computing, ML, LORA, Next}
+			\item {\textbf{LORA adapter} trained on \textbf{AWS} G4DN GPU instance for generating taylor swift images using SDXL model}
+			\item {Hosted on \textbf{huggingface} ML platform}
+			% \item {Leveraged \textbf{cloud computing} to be viable on low-power devices}
+			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, \textbf{Stable Diffusion} and \textbf{Next.js 14}}
+			\item {\textbf{Technical Skills:} Cloud Computing, ML, LORA, Nextjs, Cloudflare, SSL}
 			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
 		\end{cvitems}
 	}
@@ -106,9 +121,9 @@
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-      \item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, dynamo, graphql), pytorch, chatGPT}
+			\item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, dynamo, graphql), pytorch, chatGPT}
 			% \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
-			\item {Built using \textbf{SWAG - nginx}, \textbf{Docker}, \textbf{AWS - lambda, statemachine, stepfunctions, SAM, etc}, \textbf{Pytorch}, \textbf{ChatGPT}}
+			\item {Built using \textbf{SWAG - nginx}, \textbf{Docker}, \textbf{AWS - (lambda, statemachine, stepfunctions, SAM)}, \textbf{Pytorch}, \textbf{ChatGPT}}
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
 		\end{cvitems}
 	}
