--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python, C/C++, Java, HTML/CSS, JavaScript} % Skills
+    {Python, C/C++, Java, HTML/CSS, JavaScript, VHDL, Matlab} % Skills
 
   \cvskill
     {Technologies} % Category
