--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -9,19 +9,7 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-  \cventry
-    {Software Developer Co-Op} % Job title
-    {TELUS Corporation} % Organisation
-    {Ottawa, ON} % Location
-    {May 2023 - August 2023} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need}
-          \item[] {\textbf{Technical Skills:} Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
-        \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team}
-          \item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
-      \end{cvitems}
-    }
+  
 
 %---------------------------------------------------------
   % \cventry
@@ -46,13 +34,26 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         % \item {Developed major releases of internal tools such as the extract logs application}
-        \item {Built \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors}
-        \item {Use of \textbf{AWS} for audio sentiment analysis with pytorch}
+        \item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors}
+        \item {\textbf{AWS} for audio sentiment analysis with pytorch}
         \item {Extensive use of \textbf{python} and \textbf{jupyterlab} for scripting, automating, and general parsing of complex log files}
-        \item Use of the \textbf{scrapy} python framework for webcrawling data
+        \item Used \textbf{Scrapy} python framework for webcrawling data
       \end{cvitems}
     }
 
+  \cventry
+    {Software Developer Co-Op} % Job title
+    {TELUS Corporation} % Organisation
+    {Ottawa, ON} % Location
+    {May 2023 - August 2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need}
+          \item[] {\textbf{Technical Skills:} Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
+        \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team}
+          \item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
+      \end{cvitems}
+    }
 %---------------------------------------------------------
   % \cventry
   %   {Assistant Teacher Supervisor} % Job title
